# agent-sandbox

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_sandbox/: __init__.py  aws.py  caller_cwd.py  cli.py  install.py  logger.py  passthrough.py  sandbox.py
tests/: test_aws.py  test_cli.py  test_install.py  test_run_cli.py  test_sandbox.py
